Fix color text dark mode

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,14 +5,15 @@
 @layer base {
   body {
     min-width: 300px;
+    @apply text-gray-900 dark:text-gray-300;
   }
 
   h1 {
-    @apply text-xl text-gray-900 md:text-2xl lg:text-3xl font-bold mt-6 mb-4 dark:text-gray-300;
+    @apply text-xl md:text-2xl lg:text-3xl font-bold mt-6 mb-4 dark:text-gray-300;
   }
 
   h2 {
-    @apply text-lg text-gray-900 md:text-xl lg:text-2xl font-semibold mt-8 mb-2  dark:text-gray-300;
+    @apply text-lg md:text-xl lg:text-2xl font-semibold mt-8 mb-2  dark:text-gray-300;
   }
 
   a {
@@ -20,7 +21,7 @@
   }
 
   p {
-    @apply mb-4 text-gray-900 dark:text-gray-300;
+    @apply mb-4;
   }
 
   strong {
